dark mode css fixed

--- a/src/cssFile/country.css
+++ b/src/cssFile/country.css
@@ -1,6 +1,3 @@
-/* .main-country-detail-container{
-    height: calc(100vh - 72px);
-} */
 .country-details-container {
     max-width: 1200px;
     margin-inline: auto;
